Demo.Blazor.Charts: add minimal charts

--- a/web/demo/Demo.Blazor.Charts/wwwroot/index.html
+++ b/web/demo/Demo.Blazor.Charts/wwwroot/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Demo.Blazor.Charts</title>
   <base href="/" />
+  <script type="module" src="_content/Annium.Blazor.Interop/index.js"></script>
   <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
   <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
 </head>
